@@ -110,12 +110,18 @@ public class RaceSimTools {
 	 */
 	public static RaceState sampleNextState(RaceState state, List<Action> actions,
 			Track track, Random random) {
-		
+
 		// Check number of actions matches number of player cycles
 		if (actions.size() != state.getPlayers().size()) {
 			System.out.println("ERROR: Mismatch between number of actions and "
 					+ "players.");
 			return null;
+		}
+		
+		// Generate next turn's distractor states
+		List<Distractor> newDistractors = new ArrayList<Distractor>();
+		for (Distractor d : state.getDistractors()) {
+			newDistractors.add(sampleNextDistractor(d, random));
 		}
 		
 		// Generate next turn's player states
@@ -124,7 +130,7 @@ public class RaceSimTools {
 		for (int i = 0; i < actions.size(); i++) {
 			Player player = state.getPlayers().get(i);
 			newPlayers.add(sampleNextPlayer(player, track,
-					state.getDistractors(), actions.get(i), random, adv1Plus));
+					newDistractors, actions.get(i), random, adv1Plus));
 		}
 	
 		// Generate next turn's opponent states
@@ -133,12 +139,6 @@ public class RaceSimTools {
 			newOpponents.add(sampleNextOpponent(o, newPlayers, track, random));
 		}
 			
-		// Generate next turn's distractor states
-		List<Distractor> newDistractors = new ArrayList<Distractor>();
-		for (Distractor d : state.getDistractors()) {
-			newDistractors.add(sampleNextDistractor(d, random));
-		}
-		
 		RaceState.Status status = getStatus(newPlayers, newOpponents, track,
 				state.getTurnNo() + 1);
 		return new RaceState(newPlayers, newOpponents, newDistractors, status,
@@ -204,10 +204,10 @@ public class RaceSimTools {
 	 */
 	public static Map<RaceState, Double> nextStates(RaceState state,
 			List<Action> actions, Track track, Random random) {
-		
+
+		int numDistractors = state.getDistractors().size();
 		int numPlayers = state.getPlayers().size();
 		int numOpponents = state.getOpponents().size();
-		int numDistractors = state.getDistractors().size();
 		boolean adv1Plus = numPlayers > 1;
 		
 		// Check number of actions matches number of player cycles
@@ -223,52 +223,6 @@ public class RaceSimTools {
 		leaves.add(root);
 		ArrayList<Double> leafProb = new ArrayList<Double>();
 		leafProb.add(1.0);
-		
-		// Probability distributions over next player states
-		for (int i = 0; i < actions.size(); i++) {
-			Player currentPlayer = state.getPlayers().get(i);
-			Map<Player, Double> np = nextPlayers(currentPlayer, actions.get(i),
-					track, state.getDistractors(), adv1Plus);
-			ArrayList<Node<Actor>> newLeaves = new ArrayList<Node<Actor>>();
-			ArrayList<Double> newLeafProb = new ArrayList<Double>();
-			for (int j = 0; j < leaves.size(); j++) {
-				Node<Actor> parent = leaves.get(j);
-				for (Map.Entry<Player, Double> entry : np.entrySet()) {
-					Node<Actor> child = new Node<Actor>(entry.getKey());
-					parent.addChild(child);
-					newLeaves.add(child);
-					newLeafProb.add(leafProb.get(j) * entry.getValue());
-				}
-			}
-			leaves = newLeaves;			
-			leafProb = newLeafProb;
-		}
-		
-		// Probability distributions over next opponent states
-		// Not independent to current player states
-		for (Opponent o : state.getOpponents()) {
-			ArrayList<Node<Actor>> newLeaves = new ArrayList<Node<Actor>>();
-			ArrayList<Double> newLeafProb = new ArrayList<Double>();
-			for (int i = 0; i < leaves.size(); i++) {
-				Node<Actor> parent = leaves.get(i);
-				List<Player> branchPlayers = new ArrayList<Player>();
-				List<Actor> branchActors = parent.getDataAncestry();
-				ListIterator<Actor> it = branchActors.listIterator();
-				it.next();	// Ignore root dummy
-				for (int j = 0; j < numPlayers; j++) {
-					branchPlayers.add((Player) it.next());
-				}
-				Map<Opponent, Double> no = nextOpponents(o, branchPlayers, track);
-				for (Map.Entry<Opponent, Double> entry : no.entrySet()) {
-					Node<Actor> child = new Node<Actor>(entry.getKey());
-					parent.addChild(child);
-					newLeaves.add(child);
-					newLeafProb.add(leafProb.get(i) * entry.getValue());
-				}
-			}
-			leaves = newLeaves;	
-			leafProb = newLeafProb;
-		}
 		
 		// Probability distributions over next distractor states
 		for (Distractor d : state.getDistractors()) {
@@ -288,6 +242,68 @@ public class RaceSimTools {
 			leafProb = newLeafProb;
 		}
 		
+		// Probability distributions over next player states
+		// Not independent to current distractor states
+		for (int i = 0; i < numPlayers; i++) {
+			Player currentPlayer = state.getPlayers().get(i);
+			ArrayList<Node<Actor>> newLeaves = new ArrayList<Node<Actor>>();
+			ArrayList<Double> newLeafProb = new ArrayList<Double>();
+			for (int j = 0; j < leaves.size(); j++) {
+				
+				// Get distractor states for this leaf's ancestry
+				Node<Actor> parent = leaves.get(j);
+				List<Distractor> ancDistractors = new ArrayList<Distractor>();
+				List<Actor> ancActors = parent.getDataAncestry();
+				ListIterator<Actor> it = ancActors.listIterator();
+				it.next();	// Ignore root dummy
+				for (int k = 0; k < numDistractors; k++) {
+					ancDistractors.add((Distractor) it.next());
+				}
+				
+				// Generate probability distribution over next player states
+				Map<Player, Double> np = nextPlayers(currentPlayer,
+						actions.get(i), track, ancDistractors, adv1Plus);
+
+				// Add a new child to this leaf for each possible next player state
+				for (Map.Entry<Player, Double> entry : np.entrySet()) {
+					Node<Actor> child = new Node<Actor>(entry.getKey());
+					parent.addChild(child);
+					newLeaves.add(child);
+					newLeafProb.add(leafProb.get(j) * entry.getValue());
+				}
+			}
+			leaves = newLeaves;			
+			leafProb = newLeafProb;
+		}
+		
+		// Probability distributions over next opponent states
+		// Not independent to current player states
+		for (Opponent o : state.getOpponents()) {
+			ArrayList<Node<Actor>> newLeaves = new ArrayList<Node<Actor>>();
+			ArrayList<Double> newLeafProb = new ArrayList<Double>();
+			for (int i = 0; i < leaves.size(); i++) {
+				
+				// Get player states for this leaf's ancestry
+				Node<Actor> parent = leaves.get(i);
+				List<Player> ancPlayers = new ArrayList<Player>();
+				List<Actor> ancActors = parent.getDataAncestry();
+				ListIterator<Actor> it = ancActors.listIterator(
+						1 + numDistractors);
+				for (int j = 0; j < numPlayers; j++) {
+					ancPlayers.add((Player) it.next());
+				}
+				Map<Opponent, Double> no = nextOpponents(o, ancPlayers, track);
+				for (Map.Entry<Opponent, Double> entry : no.entrySet()) {
+					Node<Actor> child = new Node<Actor>(entry.getKey());
+					parent.addChild(child);
+					newLeaves.add(child);
+					newLeafProb.add(leafProb.get(i) * entry.getValue());
+				}
+			}
+			leaves = newLeaves;	
+			leafProb = newLeafProb;
+		}
+		
 		// Construct the result
 		Map<RaceState, Double> result = new HashMap<RaceState, Double>();
 		for (int i = 0; i < leaves.size(); i++) {
@@ -296,9 +312,13 @@ public class RaceSimTools {
 			List<Node<Actor>> ancestry = leaf.getAncestry();
 			ListIterator<Node<Actor>> it = ancestry.listIterator();
 			it.next();  // Ignore dummy root
+			List<Distractor> stateDistractors = new ArrayList<Distractor>();
 			List<Player> statePlayers = new ArrayList<Player>();
 			List<Opponent> stateOpponents = new ArrayList<Opponent>();
-			List<Distractor> stateDistractors = new ArrayList<Distractor>();
+			for (int j = 0; j < numDistractors; j++) {
+				Distractor d = (Distractor) it.next().getData();
+				stateDistractors.add(d);
+			}
 			for (int j = 0; j < numPlayers; j++) {
 				Player p = (Player) it.next().getData();
 				statePlayers.add(p);
@@ -306,10 +326,6 @@ public class RaceSimTools {
 			for (int j = 0; j < numOpponents; j++) {
 				Opponent o = (Opponent) it.next().getData();
 				stateOpponents.add(o);
-			}
-			for (int j = 0; j < numDistractors; j++) {
-				Distractor d = (Distractor) it.next().getData();
-				stateDistractors.add(d);
 			}
 			
 			RaceState.Status status = getStatus(statePlayers, stateOpponents,
@@ -665,6 +681,12 @@ public class RaceSimTools {
 		// n is the number of columns
 		if (opponents.size() == 0) {
 			if (turnNo > 2 * track.getNumCols()) {
+				return RaceState.Status.LOST;
+			}
+		} else {
+			
+			// If there are opponents, there is still a 100n time limit
+			if (turnNo > 100 * track.getNumCols()) {
 				return RaceState.Status.LOST;
 			}
 		}
