@@ -14,3 +14,13 @@
 - Fixed a bug in RaceSimTools.stateToString
 - Fixed a line in StLucia test track
 
+24/9/2014 	V1.3	Additional error checking and bug fix
+- Error check in Tour.startRace for ensuring each player has a unique id.
+- Added check in RaceSimTools to ensure that action TO can only be used when there is > 1 player
+- Additional comment in Player
+
+2/10/2014	V1.4	Bug fixes, stdio
+- Added solver/Stdio.java
+- Tracks and number of players for each track now need to be registered before any race starts. 
+- Modified code to match latests clarifications, most notably the distractor damage system has been modified: penalty is received when a cycle and a distractor are in the same cell at the same time
+
